--- a/array.html
+++ b/array.html
@@ -60,42 +60,103 @@
 	});
 	console.log(less)
 	
+	//fill
+	var x=["red","green","blue","pink"]
+	var x1=x.fill("yellow",2,5)
+	console.log(x1)
+	
+	//concat
+	var y=["mango","orange","apple"]
+	var y1=["banana","pomagranate","kiwi"]
+	var concat=y.concat(y1)
+	console.log(concat)
+	
+	//indexOf
+	var z=[10,20,30,40,50]
+	console.log(z.indexOf(30,3))
+	//reverse
+	console.log(z.reverse())
+	//slice
+	console.log(z.slice(0,3))
+	console.log(z)
+	
+	//toSting
+	var com=["America","Africa","Australia","Afhanistan"]
+	var com1=com.toString()
+	console.log(com1)
+	console.log(com)
+	
+	//map
+	var number=[1,2,3,4,5]
+	var multi=number.map(function(value,index,arr){
+	    return value*2 
+		}
+	)
+	console.log(multi)
+	console.log(number)
+	
+	var arr=[10,20,30,40,50]
+	var value=arr.some(function(value){
+	    return value>20
+	})
+	console.log(value)
+	
+	//filter 
+	var sample=[10,11,34,20, 5,30,11,23, 8,40]
+	var fil=sample.filter(function(val){
+	    return val%2==0;
+	
+	})
+	console.log(fil)
+	
+	//findIndex and findLastIndex
+	var fi=[21,10, 5, 7, 11,30, 13]
+	var findin=fi.findIndex(function(val){
+	    return val%2==0
+	})
+	console.log(findin)
+	var findla=fi.findLastIndex(function(val){
+	    return val%3==0
+	})
+	console.log(findla)
+	
+	//includes
+	var inc=["one",'two','three','four','five']
+	var include=inc.includes('thwo')
+	console.log(include)
 	
 	
 	<!-- array method tasks -->
-	var input=[4,5,6,7];
-	var remove=input.unshift(1,2,3)
-	var two=input.splice(5,2);
-	console.log(input)
+	<!-- var input=[4,5,6,7]; -->
+	<!-- var remove=input.unshift(1,2,3) -->
+	<!-- var two=input.splice(5,2); -->
+	<!-- console.log(input) -->
 	
-	const input1=[1,3,4,5]
-	var output=input1.reduce((curr,pre)=>curr+pre)
-	console.log(output)
+	<!-- const input1=[1,3,4,5] -->
+	<!-- var output=input1.reduce((curr,pre)=>curr+pre) -->
+	<!-- console.log(output) -->
 	
-	<!-- //input=[4,5,6,8,3] -->
-	<!-- //output=[4,6,8] -->
-	
-	const numbers = [4,5,6,8,3];
-	const even = [];
-	numbers.forEach((num) => {
-	  if (num % 2 === 0) {
-		even.push(num);
-	  }
-	});
-	console.log(even);
+	<!-- const numbers = [4,5,6,8,3]; -->
+	<!-- const even = []; -->
+	<!-- numbers.forEach((num) => { -->
+	  <!-- if (num % 2 === 0) { -->
+		<!-- even.push(num); -->
+	  <!-- } -->
+	<!-- }); -->
+	<!-- console.log(even); -->
 	
 	
 	
-	const numbers1 = [4,5,6,8,3];
-	const addeven =[];
-	numbers.forEach((num) => {
-	  if (num % 2 === 0) {
-	    addeven.push(num);
-	  }
-	});
-	console.log(addeven);
-	var output=addeven.reduce((curr,pre)=>curr+pre)
-	console.log(output)
+	<!-- const numbers1 = [4,5,6,8,3]; -->
+	<!-- const addeven =[]; -->
+	<!-- numbers.forEach((num) => { -->
+	  <!-- if (num % 2 === 0) { -->
+	    <!-- addeven.push(num); -->
+	  <!-- } -->
+	<!-- }); -->
+	<!-- console.log(addeven); -->
+	<!-- var output=addeven.reduce((curr,pre)=>curr+pre) -->
+	<!-- console.log(output) -->
 	
 
 
